[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu.png" type="Texture" id=1]
[ext_resource path="res://OptionsManager.gd" type="Script" id=2]
[ext_resource path="res://input_menu/fonts/montserrat-extra-bold-24px.tres" type="DynamicFont" id=3]

[node name="options" type="Node2D"]
script = ExtResource( 2 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( 512.5, 300.5 )
scale = Vector2( 0.64665, 0.499584 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 48.0
margin_top = 537.0
margin_right = 185.0
margin_bottom = 569.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_right = 137.0
margin_bottom = 20.0
text = "Menu Principal"

[node name="KeyBinding" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 137.0
margin_bottom = 44.0
text = "Choix des touches"

[node name="SFX" type="VBoxContainer" parent="."]
margin_left = 552.0
margin_top = 79.0
margin_right = 749.0
margin_bottom = 221.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSound" type="HSlider" parent="SFX"]
margin_right = 197.0
margin_bottom = 16.0
size_flags_vertical = 2
value = 50.0

[node name="MainSound" type="HSlider" parent="SFX"]
margin_top = 34.0
margin_right = 197.0
margin_bottom = 50.0
size_flags_vertical = 2
value = 50.0

[node name="MusicSound" type="HSlider" parent="SFX"]
margin_top = 68.0
margin_right = 197.0
margin_bottom = 84.0
size_flags_vertical = 2
value = 50.0

[node name="Vsync" type="CheckButton" parent="SFX"]
margin_top = 102.0
margin_right = 197.0
margin_bottom = 142.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 295.0
margin_top = 74.0
margin_right = 480.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Label" parent="VBoxContainer2"]
margin_left = 35.0
margin_right = 185.0
margin_bottom = 31.0
size_flags_horizontal = 10
size_flags_vertical = 1
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 3 )
text = "SFX Sound"
uppercase = true

[node name="Control" type="Label" parent="VBoxContainer2"]
margin_top = 35.0
margin_right = 185.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 3 )
text = "  Main Sound"
align = 1
uppercase = true

[node name="Action" type="Label" parent="VBoxContainer2"]
margin_top = 70.0
margin_right = 185.0
margin_bottom = 101.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 3 )
text = "Music Sound"
uppercase = true

[node name="Action2" type="Label" parent="VBoxContainer2"]
margin_top = 105.0
margin_right = 185.0
margin_bottom = 136.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 3 )
text = "             Vsync"
uppercase = true

[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/KeyBinding" to="." method="_on_KeyBinding_pressed"]
[connection signal="value_changed" from="SFX/SFXSound" to="." method="_on_SFXSound_value_changed"]
[connection signal="value_changed" from="SFX/MainSound" to="." method="_on_MainSound_value_changed"]
[connection signal="value_changed" from="SFX/MusicSound" to="." method="_on_MusicSound_value_changed"]
[connection signal="pressed" from="SFX/Vsync" to="." method="_on_CheckButton_pressed"]
